<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2016 Pajato Technologies LLC.

This file is part of Pajato GameChat.

GameChat is free software: you can redistribute it and/or modify it under the terms of the GNU
General Public License as published by the Free Software Foundation, either version 3 of the
License, or (at your option) any later version.

GameChat is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
Public License for more details.

You should have received a copy of the GNU General Public License along with GameChat.  If not, see
http://www.gnu.org/licenses
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/joinRoomLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/border">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveGroupButton"
            android:layout_gravity="center|end"
            android:enabled="false"
            android:onClick="onClick"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/action_save"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">
        <ImageButton
            android:id="@+id/setGroupIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:onClick="onClick"
            android:background="@color/colorLightGray"
            android:contentDescription="@string/SetGroupIconDesc"
            app:srcCompat="@drawable/vd_group_black_24px" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:id="@+id/groupNameText"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColorHint="@color/white"
            android:hint="@string/CreateGroupNameHint"
            tools:text="Paul Michael Reilly Group"/>
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/clearGroupName"
            android:onClick="onClick"
            android:background="@color/colorLightGray"
            android:contentDescription="@string/AddGroupDesc"
            android:src="@drawable/ic_clear_black_24dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/addGroupMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:textStyle="normal"
        android:text="@string/AddGroupMembers"/>

</LinearLayout>
