<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings"
        android:title="@string/MenuItemSettings"
        android:icon="@drawable/ic_settings_black_24dp"/>
    <item
        android:id="@+id/helpAndFeedback"
        android:title="@string/MenuItemHelpAndFeedback"
        android:icon="@drawable/vd_help_black_24px"/>
</menu>
