<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/settings_panel">

    <ImageButton
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/settings_icon"
        android:background="@color/white"
        android:contentDescription="@string/play_another_user_desc"
        android:src="@mipmap/ic_tictactoe_red"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:id="@+id/settings_title"
        android:text="@string/playing"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        tools:text="Play XYZ" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/settings_online_button"
        android:onClick="onClick">
        <ImageButton
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/play_another_user_desc"
            android:src="@mipmap/ic_device"
            android:scaleType="fitXY"/>
        <ImageButton
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/play_locally_desc"
            android:src="@mipmap/ic_device"
            android:scaleType="fitXY"/>
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:text="@string/play_another_user"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/colorBlue"
            tools:text="With another user"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/settings_local_button"
        android:onClick="onClick">
        <ImageButton
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/play_another_user_desc"
            android:src="@mipmap/ic_device"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:text="@string/play_locally"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            tools:text="With someone nearby"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/settings_computer_button"
        android:onClick="onClick">
        <ImageButton
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/play_computer_desc"
            android:src="@mipmap/ic_device"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/play_computer"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            tools:text="Against your device"/>
    </LinearLayout>

</LinearLayout>
