...
http://www.gnu.org/licenses
-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ttt_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vs"
        android:layout_marginBottom="104dp"
        android:background="@color/colorLightBlue"
        android:text="@string/vs"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/board"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        tools:text="vs" />

    <TextView
        android:layout_width="wrap_content"
...
