<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/init_panel">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_message"
        android:padding="24dp"
        android:text="@string/NoGamesMessageText"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:text="Placeholder message ... updated at runtime."
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>